--- a/Campus_Building.qmd
+++ b/Campus_Building.qmd
@@ -32,7 +32,7 @@
     </spatialrefsys>
   </crs>
   <extent>
-    <spatial maxx="0" minz="0" maxz="0" minx="0" dimensions="2" maxy="0" miny="0" crs="EPSG:4326"/>
+    <spatial maxx="0" maxz="0" minz="0" dimensions="2" maxy="0" crs="EPSG:4326" minx="0" miny="0"/>
     <temporal>
       <period>
         <start></start>
